successfully completed 50%
